in bothe lander and launcher after defining them.

9) Added a SetReferenceComponent function. This is much easier to use, as you can say "put the 
lander above this component" rather than computing the vector with SetReferencePoint.

10) Renaming any files to GruppX_filename (i.e. adding GruppX_ to the beginning of the file name, 
where X is your groups letter or name) will now ignore the file in git. However, using this 
requires changing imports in the other files to e.g. "import GruppX_Launchers as Launchers".

11) Now chooses GroupLogo_local.png if available, otherwise GroupLogo.png. This allows local grouplogo 
file to be ignored by git.

12) Added a Schrodbull can on the floor to mark the global origin (coordinate 0,0,0) by request

13) Added MoveComponentBy and MoveComponentTo to MiroModule class. This means you can now manually move
a single component relative to the rest of the module. MoveComponentBy moves the component from where
it is, and MoveComponentTo ignores current position and puts the component in a specific location.

14) Improved lighting. Should give some performance boost without any notable loss of quality.

----------------------------------------------------------------------------------------------------
2020-09-24

Can now set custom density when importing objects from .obj files.

----------------------------------------------------------------------------------------------------
2020-09-23

Added specifications to the two big thunks making ut the Demo Launcher to the specs document in the
documents directory.

Added the DirectX .dll file to the repository with instructions on how to perform the shader fix on
Windows. Note that this procedure should in general not be followed if instructed by sources you do 
not trust, as the .dll file gets access to your system. In this case, it is an old graphics API file
that microsoft has created that has been copied from another Windows machine's directory.